# memguard

./: .gitignore  LICENSE  README.md  pyproject.toml
memguard/: __init__.py
memguard/ai/: analyzer.py  client.py  explainability.py
memguard/api/: server.py
memguard/api/static/: app.js
memguard/cli/: main.py  tui.py
memguard/core/: hardening.py  heaptrack.py  memhint.py  parsers.py  runner.py  schema.py  symbolizers.py  taintflow.py  timetravel.py  visualizer.py
memguard/debugger/: interactive.py
memguard/languages/: __init__.py
memguard/pipeline/: orchestrator.py
memguard/tests/fixtures/leaky_c/: server_sim.c
memguard/tests/fixtures/leaky_python/: all_bugs.py
memguard/tests/fixtures/leaky_rust/src/: main.rs
